crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/017.cypher
MATCH (n) RETURN n.password; MATCH (m:Admin) RETURN m
